# notify-factory

./: .gitignore  LICENSE  README.md  config.json  env.example  main.py  requirements.txt  setup_demo_env.sh  streamlit_app.py
configs/: settings.yaml
environment/: flutter_install.sh  setup_demo_env.sh  setup_flutter_project.sh
factory/: pyproject.toml
factory/configs/: config.yaml  paths.yaml  settings.yaml
factory/secretary/: streamlit_app.py  util.py
flutter/: main.dart
flutter/widgets/: decrypt_box.dart  tree_menu.dart
flutter_code/: main.dart
flutter_code/pages/: today_page.dart
flutter_code/services/: decryptor.dart
flutter_code/widgets/: message_view.dart
flutter_project/: pubspec.yaml
flutter_project/flutter_code/: main.dart
flutter_project/flutter_code/pages/: today_page.dart
flutter_project/flutter_code/services/: data_loader.dart  decryptor.dart
flutter_project/flutter_code/widgets/: message_view.dart  tree_menu.dart
flutter_ui/: pubspec.yaml
flutter_ui/lib/: main.dart
flutter_ui/lib/pages/: today_page.dart
secretary/: encryptor.py  main.py  main_script.py  streamlit_app.py  streamlit_tools.py  tools_db.py  util.py
tests/: test_main.py
